// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Billing Details component should renders correctly with credit card details 1`] = `
<Styled(BodyCopy)
  className=""
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_orderDetails_billing
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Row)
      className="elem-mb-XS"
      fullBleed={true}
    >
      <Styled(Col)
        className="card-details"
        colSize={
          Object {
            "large": 12,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(Image)
          className="elem-mr-XS card-border"
          src="/static/images/visa.svg"
        />
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          lbl_orders_ending 1111
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="div"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Address)
      showCountry={false}
      showPhone={false}
    />
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;

exports[`Order Billing Details component should renders correctly with venmo card  1`] = `
<Styled(BodyCopy)
  className=""
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_orderDetails_billing
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Row)
      className="elem-mb-XS"
      fullBleed={true}
    >
      <Styled(Col)
        className="card-details"
        colSize={
          Object {
            "large": 12,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(Image)
          className="elem-mr-XS card-border"
        />
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          lbl_orders_ending name
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="div"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Address)
      showCountry={false}
      showPhone={false}
    />
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;
